web/sdk/admin/views/organizations/details/tokens/tokens.module.css
.empty-state {
  height: 100%;
}

.empty-state-subheading {
  max-width: 360px;
  text-wrap: auto;
}

.table {
  width: 100%;
  table-layout: fixed;
}

.table-wrapper {
  /* Navbar Height + Toolbar height */
  max-height: calc(100vh - 90px);
  overflow: scroll;
}

.table-header {
  /* position: relative; */
  z-index: 2;
}

.first-column {
  padding-left: var(--rs-space-7);
}

/* Target Tooltip's root element (direct child of wrapper) – constrains width so inner text can truncate */
.truncate-tooltip-wrapper>* {
  width: 100%;
}

.truncate-text {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

